--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,5 +18,5 @@ chrono = { version = "0.4.41", features = ["serde"] }
 thiserror = "2.0.12"
 sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "chrono"] }
 tracing-subscriber = "0.3.19"
-tower-http = { version = "0.6.6", features = ["cors", "auth", "limit", "trace", "sensitive-headers"] }
+tower-http = { version = "0.6.6", features = ["cors", "auth", "limit", "trace", "sensitive-headers", "fs"] }
 tower = "0.5.2"
