--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,3 +20,5 @@ sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "u
 tracing-subscriber = "0.3.19"
 tower-http = { version = "0.6.6", features = ["cors", "auth", "limit", "trace", "sensitive-headers", "fs"] }
 tower = "0.5.2"
+webauthn-rs = { version = "0.5.2", features = ["danger-allow-state-serialisation"] }
+axum-extra = { version = "0.10.1", features = ["cookie"] }
