--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -22,3 +22,5 @@ tower-http = { version = "0.6.6", features = ["cors", "auth", "limit", "trace", 
 tower = "0.5.2"
 webauthn-rs = { version = "0.5.2", features = ["danger-allow-state-serialisation"] }
 axum-extra = { version = "0.10.1", features = ["cookie"] }
+blake3 = { version = "1.8.2", features = ["serde"] }
+rand = { version = "0.9.1", default-features = false, features = ["thread_rng"] }
