--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -24,3 +24,6 @@ webauthn-rs = { version = "0.5.2", features = ["danger-allow-state-serialisation
 axum-extra = { version = "0.10.1", features = ["cookie"] }
 blake3 = { version = "1.8.2", features = ["serde"] }
 rand = { version = "0.9.1", default-features = false, features = ["thread_rng"] }
+
+[dev-dependencies]
+serde_json = "1.0.140"
