--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,10 +20,13 @@ sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "u
 tracing-subscriber = "0.3.19"
 tower-http = { version = "0.6.6", features = ["cors", "auth", "limit", "trace", "sensitive-headers", "fs"] }
 tower = "0.5.2"
-webauthn-rs = { version = "0.5.2", features = ["danger-allow-state-serialisation"] }
+webauthn-rs = { version = "0.5.2", features = ["conditional-ui", "danger-allow-state-serialisation"] }
 axum-extra = { version = "0.10.1", features = ["cookie"] }
 blake3 = { version = "1.8.2", features = ["serde"] }
 rand = { version = "0.9.1", default-features = false, features = ["thread_rng"] }
+webauthn-rs-proto = "0.5.2"
+cookie = "0.18.1"
+base64 = "0.22.1"
 
 [dev-dependencies]
 serde_json = "1.0.140"
