--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -18,7 +18,7 @@ chrono = { version = "0.4.41", features = ["serde"] }
 thiserror = "2.0.12"
 sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "chrono"] }
 tracing-subscriber = "0.3.19"
-tower-http = { version = "0.6.6", features = ["cors", "auth", "limit", "trace", "sensitive-headers", "fs"] }
+tower-http = { version = "0.6.6", features = ["cors", "auth", "limit", "trace", "sensitive-headers", "fs", "set-header"] }
 tower = "0.5.2"
 webauthn-rs = { version = "0.5.2", features = ["conditional-ui", "danger-allow-state-serialisation"] }
 axum-extra = { version = "0.10.1", features = ["cookie"] }
