--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -30,11 +30,14 @@ sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "u
 tracing-subscriber = "0.3.19"
 tower-http = { version = "0.6.6", features = ["cors", "auth", "limit", "trace", "sensitive-headers", "fs", "set-header"] }
 tower = "0.5.2"
-webauthn-rs = { version = "0.5.2", features = ["conditional-ui", "danger-allow-state-serialisation"] }
+webauthn-rs = { path = "../webauthn-rs/webauthn-rs", features = ["conditional-ui", "danger-allow-state-serialisation", "schemars"] }
 axum-extra = { version = "0.10.1", features = ["cookie"] }
 blake3 = { version = "1.8.2", features = ["serde"] }
 rand = { version = "0.9.1", default-features = false, features = ["thread_rng"] }
-webauthn-rs-proto = "0.5.2"
+webauthn-rs-proto = { path = "../webauthn-rs/webauthn-rs-proto", features = ["schemars"] }
 cookie = "0.18.1"
 base64 = "0.22.1"
 serde_json = "1.0.140"
+schemars = { version = "0.9.0", features = ["derive", "uuid1", "bytes1", "chrono04"] }
+aide = { version = "0.15.0", features = ["axum", "axum-json", "axum-extra", "axum-extra-cookie", "http"] }
+indexmap = "2.10.0"
