--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,7 +10,7 @@ readme.workspace = true
 
 [features]
 default = ["sqlite3"]
-sqlite3 = ["sqlx"]
+sqlite3 = ["sqlx", "sqlx/sqlite"]
 sqlx = ["dep:sqlx"]
 
 [lints.clippy]
@@ -26,7 +26,7 @@ serde = { version = "1.0.219", features = ["derive", "rc"] }
 uuid = { version = "1.17.0", features = ["v4", "serde"] }
 chrono = { version = "0.4.41", features = ["serde"] }
 thiserror = "2.0.12"
-sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "chrono"], optional = true }
+sqlx = { version = "0.8.6", features = ["runtime-tokio", "migrate", "uuid", "chrono"], optional = true }
 tracing-subscriber = "0.3.19"
 tower-http = { version = "0.6.6", features = ["cors", "auth", "limit", "trace", "sensitive-headers", "fs", "set-header"] }
 tower = "0.5.2"
